--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <image src="http://bit.ly/PlexaryDemoLogo" alt="" height=500 width=300/>
     </div>
     <div class="knowledge">
-        <pre>How to build a web</pre>
+        <pre>How to build an awesome web</pre>
     </div>
 </body>
 
