--- a/index.html
+++ b/index.html
@@ -2,21 +2,23 @@
 <html>
 
 <head>
-    <title >Plexary</title>
+    <title>Plexary</title>
     <link rel="stylesheet" href="./main.css" />
 </head>
 
 <body id="bgcolor">
     <div align="center" id="a">
-        <p style="background-color: aquamarine; font-size:90px; color: yellow;border:teal solid 99px ;" >Welcome to Plexary.</p>
+        <p style="background-color: aquamarine; font-size:90px; color: yellow;border:teal solid 99px ;">Welcome to
+            Plexary.</p>
         <hr>
+        <p>Testing website</p>
         <button class="btn default">Home</button>
         <button class="btn default">Information</button>
         <button class="btn default">Contact</button>
         <button class="btn default">Map</button>
         <button class="btn default">Default</button>
         <p><a href="https://www.google.com/">Click here to find</a></p>
-        <image src="http://bit.ly/PlexaryDemoLogo" alt="" height=500 width=300/>
+        <image src="http://bit.ly/PlexaryDemoLogo" alt="" height=500 width=300 />
     </div>
     <div class="knowledge">
         <pre>How to build a fucking good web</pre>
