--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body id="bgcolor">
     <div align="center" id="a">
-        <p style="background-color: aquamarine; font-size:90px; color: yellow;border:teal solid 99px ;">Welcome to
+        <p style="background-color: aquamarine; font-size:90px; color: yellow;">Welcome to
             Plexary.</p>
         <hr>
         <p>Testing website</p>
@@ -22,6 +22,7 @@
     </div>
     <div class="knowledge">
         <pre>How to build a fucking good web</pre>
+        
     </div>
 </body>
 
