--- a/index.html
+++ b/index.html
@@ -1,29 +1,65 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<link
+			href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="./style.css" />
+		<title>Landing Page</title>
+	</head>
+	<body>
+		<header>
+			<div class="logo-container">
+				<img src="http://bit.ly/PlexaryDemoLogo" height="32" width="32" alt="logo" />
+				<h4 class="logo">Plexary</h4>
+			</div>
+			<nav>
+				<ul class="nav-links">
+					<li><a class="nav-link" href="#">Specs</a></li>
+					<li><a class="nav-link" href="#">Products</a></li>
+					<li><a class="nav-link" href="#">Contact</a></li>
+				</ul>
+			</nav>
+			<div class="cart">
+				<img src="./img/cart.svg" alt="cart" />
+			</div>
+		</header>
 
-<head>
-    <title>Plexary</title>
-    <link rel="stylesheet" href="./main.css" />
-</head>
+		<main>
+			<section class="presentation">
+				<div class="introduction">
+					<div class="intro-text">
+						<h1>Laptop for the future</h1>
+						<p>
+							The new 14 inch bezeless display oferring a 4k
+							display with touch screen.
+						</p>
+					</div>
+					<div class="cta">
+						<button class="cta-select">14 Inch</button>
+						<button class="cta-add">Add To Cart</button>
+					</div>
+				</div>
+				<div class="cover">
+					<img src="./img/matebook.png" alt="matebook" />
+				</div>
+			</section>
 
-<body id="bgcolor">
-    <div align="center" id="a">
-        <p style="background-color: aquamarine; font-size:90px; color: yellow;">Welcome to
-            Plexary.</p>
-        <hr>
-        <p>Testing website</p>
-        <button class="btn default">Home</button>
-        <button class="btn default">Information</button>
-        <button class="btn default">Contact</button>
-        <button class="btn default">Map</button>
-        <button class="btn default">Default</button>
-        <p><a href="https://www.google.com/">Click here to find</a></p>
-        <image src="http://bit.ly/PlexaryDemoLogo" alt="" height=500 width=300 />
-    </div>
-    <div class="knowledge">
-        <pre>How to build a fucking good web</pre>
-        
-    </div>
-</body>
+			<div class="laptop-select">
+				<img src="./img/arrow-left.svg" alt="" />
+				<img src="./img/dot.svg" alt="" />
+				<img src="./img/dot-full.svg" alt="" />
+				<img src="./img/dot-full.svg" alt="" />
+				<img src="./img/arrow-right.svg" alt="" />
+			</div>
 
+			<img class="big-circle" src="./img/big-eclipse.svg" alt="" />
+			<img class="medium-circle" src="./img/mid-eclipse.svg" alt="" />
+			<img class="small-circle" src="./img/small-eclipse.svg" alt="" />
+		</main>
+	</body>
 </html>
