--- a/index.html
+++ b/index.html
@@ -7,19 +7,18 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap" rel="stylesheet" />
 	<link rel="stylesheet" href="./style.css" />
-	<title>Landing Page</title>
+	<title>Plexary Home</title>
 </head>
 
 <body>
 	<header>
 		<div class="logo-container">
-			<img src="./img/Plexary.jpg" height="32" width="32" alt="logo" />
+			<img src="./img/PX Transparent.png" height="32" width="32" alt="logo" />
 			<h4 class="logo">Plexary</h4>
 		</div>
 		<nav>
 			<ul class="nav-links">
-				<li><a class="nav-link" href="#">Specs</a></li>
-				<li><a class="nav-link" href="#">Products</a></li>
+				<li><a class="nav-link" href="#">About</a></li>
 				<li><a class="nav-link" href="#">Contact</a></li>
 			</ul>
 		</nav>
@@ -32,19 +31,19 @@
 		<section class="presentation">
 			<div class="introduction">
 				<div class="intro-text">
-					<h1>Laptop for the future</h1>
+					<h1>A start-up company.</h1>
 					<p>
-						The new 14 inch bezeless display oferring a 4k
-						display with touch screen.
+						This website is currently under-construction. Please visit www.phucvo.com for further
+						information.
 					</p>
 				</div>
 				<div class="cta">
-					<button class="cta-select">14 Inch</button>
-					<button class="cta-add">Add To Cart</button>
+					<!-- <button class="cta-select">14 Inch</button> -->
+					<input type="button" class="cta-add" onclick="location.href='https://phucvo.com';" value="Visit" />
 				</div>
 			</div>
 			<div class="cover">
-				<img src="./img/matebook.png" alt="matebook" />
+				<img src="./img/Plexary.jpg" alt="plexary" />
 			</div>
 		</section>
 
