--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap" rel="stylesheet" />
 	<link rel="stylesheet" href="./style.css" />
-	<title>Plexary Home</title>
+	<title>Plexary</title>
+	<meta name="description" content="Plexary - Daily life solutions made simple.">
 </head>
 
 <body>
