--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap" rel="stylesheet" />
 	<link rel="stylesheet" href="./style.css" />
+	<link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="img/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="img/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="img/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+	<link rel="manifest" href="/manifest.json">
 	<title>Plexary</title>
 	<meta name="description" content="Plexary - Daily life solutions made simple.">
 </head>
@@ -19,13 +33,10 @@
 		</div>
 		<nav>
 			<ul class="nav-links">
-				<li><a class="nav-link" href="#">About</a></li>
-				<li><a class="nav-link" href="#">Contact</a></li>
+				<li><a class="nav-link" href="/about.html">About</a></li>
+				<li><a class="nav-link" href="/contact.html">Contact</a></li>
 			</ul>
 		</nav>
-		<div class="cart">
-			<img src="./img/cart.svg" alt="cart" />
-		</div>
 	</header>
 
 	<main>
@@ -47,18 +58,6 @@
 				<img src="./img/Plexary.jpg" alt="plexary" />
 			</div>
 		</section>
-
-		<div class="laptop-select">
-			<img src="./img/arrow-left.svg" alt="" />
-			<img src="./img/dot.svg" alt="" />
-			<img src="./img/dot-full.svg" alt="" />
-			<img src="./img/dot-full.svg" alt="" />
-			<img src="./img/arrow-right.svg" alt="" />
-		</div>
-
-		<img class="big-circle" src="./img/big-eclipse.svg" alt="" />
-		<img class="medium-circle" src="./img/mid-eclipse.svg" alt="" />
-		<img class="small-circle" src="./img/small-eclipse.svg" alt="" />
 	</main>
 </body>
 
