--- a/index.html
+++ b/index.html
@@ -1,64 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/devicon/2.2/devicon.min.css">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
 
 <head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-	<link href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap" rel="stylesheet" />
-	<link rel="stylesheet" href="./style.css" />
-	<link rel="apple-touch-icon" sizes="57x57" href="img/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="img/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="img/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="img/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="img/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="img/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="img/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="img/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="img/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="img/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-	<link rel="manifest" href="/manifest.json">
-	<title>Plexary</title>
-	<meta name="description" content="Plexary - Daily life solutions made simple.">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:image" content="https://bit.ly/PlexaryDemoLogo" />
+    <meta property="og:type" content="website" />
+    <title>Plexary - Official Website</title>
+    <meta name="description" content="Plexary - Công nghệ Plexary - Trang chủ Plexary - Ứng dụng Plexary">
+    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-	<header>
-		<div class="logo-container">
-			<img src="./img/PX Transparent.png" height="32" width="32" alt="logo" />
-			<h4 class="logo">Plexary</h4>
-		</div>
-		<nav>
-			<ul class="nav-links">
-				<li><a class="nav-link" href="./about.html">About</a></li>
-				<li><a class="nav-link" href="./contact.html">Contact</a></li>
-			</ul>
-		</nav>
-	</header>
-
-	<main>
-		<section class="presentation">
-			<div class="introduction">
-				<div class="intro-text">
-					<h1>A start-up company.</h1>
-					<p>
-						This website is currently under-construction. Please visit www.phucvo.com for further
-						information.
-					</p>
-				</div>
-				<div class="cta">
-					<!-- <button class="cta-select">14 Inch</button> -->
-					<input type="button" class="cta-add" onclick="location.href='https://phucvo.com';" value="Visit" />
-				</div>
-			</div>
-			<div class="cover">
-				<img src="./img/Plexary.jpg" alt="plexary" />
-			</div>
-		</section>
-	</main>
+    <div id="particles-js">
+        <div class="header">
+            <div class="content-logo tanimation kago">
+                <img src="./img/LogoW.png" alt="logo" height="180" width="180">
+            </div>
+            <h1 class="tanimation keader">
+                <span class="site-title">Plexary</span>
+                <span class="site-description">Các ứng dụng đang trong giai đoạn thử nghiệm, giữ bình tĩnh và chờ các
+                    devs cập
+                    nhật thêm.</span>
+            </h1>
+            <div class="download">
+                <a href="#" title="Android Download" rel="nofollow">
+                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v1.0.0 Beta</span></a>
+                <a href="#" title="IOS Download" rel="nofollow">
+                    <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>v1.0.0 Beta</span></a>
+            </div>
+        </div>
+    </div>
+    <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="e035849f507c62a5a40e0309-|49" defer=""></script>
 </body>
 
 </html>
