Website optimizations & Universal Favicons added

--- a/index.html
+++ b/index.html
@@ -10,8 +10,15 @@
     <meta property="og:type" content="website" />
     <title>Plexary - Official Website</title>
     <meta name="description" content="Plexary - Công nghệ Plexary - Trang chủ Plexary - Ứng dụng Plexary">
-    <link rel="stylesheet" href="./main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./main.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#2d89ef">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
@@ -22,9 +29,7 @@
             </div>
             <h1 class="tanimation keader">
                 <span class="site-title">Plexary</span>
-                <span class="site-description">Các ứng dụng đang trong giai đoạn thử nghiệm, giữ bình tĩnh và chờ các
-                    devs cập
-                    nhật thêm.</span>
+                <span class="site-description">Ứng dụng đang trong giai đoạn thử nghiệm.</span>
             </h1>
             <div class="download">
                 <a href="#" title="Android Download" rel="nofollow">
