--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="og:type" content="website" />
     <title>Plexary - Official Website</title>
     <meta name="description" content="Plexary - Công nghệ Plexary - Trang chủ Plexary - Ứng dụng Plexary">
+    <link rel=canonical href="https://www.plexary.com/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./main.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
