--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/devicon/2.2/devicon.min.css">
 <html>
 
 <head>
@@ -13,12 +12,12 @@
     <link rel=canonical href="https://www.plexary.com/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./main.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicons/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="./img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="stylesheet" href="main.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#2d89ef">
     <meta name="theme-color" content="#26262b">
 </head>
@@ -26,17 +25,17 @@
 <body>
     <div id="particles-js">
         <div class="header">
-            <div class="content-logo tanimation kago">
-                <img src="./img/LogoW.png" alt="logo" height="180" width="180">
+            <div class="tanimation kago">
+                <img src="./img/LogoW.png" alt="Plexary Logo" height="180" width="180">
             </div>
             <h1 class="tanimation keader">
                 <span class="site-title">Plexary, LLC.</span>
                 <span class="site-description">Ứng dụng đang trong giai đoạn thử nghiệm.</span>
             </h1>
             <div class="download">
-                <a href="#" title="Android Download" rel="nofollow">
+                <a href="#" rel="nofollow">
                     <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v1.0.0 Beta</span></a>
-                <a href="#" title="IOS Download" rel="nofollow">
+                <a href="#" rel="nofollow">
                     <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>v1.0.0 Beta</span></a>
             </div>
         </div>
