--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="https://bit.ly/PlexaryDemoLogo" />
     <meta property="og:type" content="website" />
-    <title>Plexary | Home</title>
-    <meta name="description" content="Plexary - Công nghệ Plexary - Trang chủ Plexary - Ứng dụng Plexary">
     <link rel=canonical href="https://www.plexary.com/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400&display=swap" rel="stylesheet">
@@ -18,7 +16,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
     <link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#2d89ef">
+    <title>Plexary | Home</title>
+    <meta name="description" content="Plexary - Trang chủ Plexary">
     <meta name="theme-color" content="#26262b">
 </head>
 
