--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Plexary | Home</title>
+    <meta name="description" content="Plexary - Trang chủ Plexary">
+    <meta name="keywords" content="Plexary, Plexary App, Plexary LLC">
     <meta property="og:image" content="https://bit.ly/PlexaryDemoLogo" />
     <meta property="og:type" content="website" />
     <link rel=canonical href="https://www.plexary.com/">
@@ -29,8 +32,6 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
     <link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#5bbad5">
-    <title>Plexary | Home</title>
-    <meta name="description" content="Plexary - Trang chủ Plexary">
     <meta name="theme-color" content="#26262b">
 </head>
 
