--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Plexary | Home</title>
     <meta name="description" content="Plexary - Trang chủ Plexary">
-    <meta name="keywords" content="Plexary, Plexary App, Plexary LLC">
+    <meta name="keywords" content="Plexary, Plexary App, Plexary LLC, Công ty Plexary, Ứng dụng Plexary">
     <meta property="og:image" content="https://bit.ly/PlexaryDemoLogo" />
     <meta property="og:type" content="website" />
     <link rel=canonical href="https://www.plexary.com/">
