--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <h1 class="tanimation keader">
                 <span class="site-title">Plexary, LLC.</span>
                 <span class="site-description">Ứng dụng đang trong giai đoạn thử nghiệm.</span>
+                <span class="site-description">Jeep Duf</span>
             </h1>
             <div class="download">
                 <a href="#" rel="nofollow">
