--- a/about.html
+++ b/about.html
@@ -2,13 +2,58 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Plexary | About us</title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Plexary | Home</title>
+    <meta name="description" content="Plexary - Trang chủ Plexary">
+    <meta name="keywords" content="Plexary, Plexary App, Plexary LLC, Công ty Plexary, Ứng dụng Plexary">
+    <meta property="og:image" content="https://bit.ly/PlexaryDemoLogo" />
+    <meta property="og:type" content="website" />
+    <link rel=canonical href="https://www.plexary.com/">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400&display=swap" rel="stylesheet">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-102059572-2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-102059572-2');
+    </script>
+
+    <link rel="stylesheet" href="main.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="theme-color" content="#26262b">
 </head>
 
 <body>
-    <h1>About us</h1>
+    <div id="particles-js">
+        <div class="header">
+            <div class="tanimation kago">
+                <img src="./img/JeepDuf.jpg" alt="Plexary Logo" height="180" width="180">
+            </div>
+            <h1 class="tanimation keader">
+                <span class="site-title">Jeep Duf as fuck</span>
+                <span class="site-description">Noob</span>
+            </h1>
+            <div class="download">
+                <a href="#" rel="nofollow">
+                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>Kill Jeep</span></a>
+                <a href="#" rel="nofollow">
+                    <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>Ban Jeep</span></a>
+            </div>
+        </div>
+    </div>
+    <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="e035849f507c62a5a40e0309-|49" defer=""></script>
 </body>
 
 </html>
