--- a/about.html
+++ b/about.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Plexary | Home</title>
+    <title>Plexary | About</title>
     <meta name="description" content="Plexary - Trang chủ Plexary">
-    <meta name="keywords" content="Plexary, Plexary App, Plexary LLC, Công ty Plexary, Ứng dụng Plexary">
+    <meta name="keywords" content="Plexary Infomation, thông tin về công ty Plexary, Plexary làm gì, Plexary LLC là công ty gì, Thông tin ứng dụng Plexary">
     <meta property="og:image" content="https://bit.ly/PlexaryDemoLogo" />
     <meta property="og:type" content="website" />
     <link rel=canonical href="https://www.plexary.com/">
@@ -39,18 +39,15 @@
     <div id="particles-js">
         <div class="header">
             <div class="tanimation kago">
-                <img src="./img/JeepDuf.jpg" alt="Plexary Logo" height="180" width="180">
+                <img src="./img/LogoW.png" alt="Plexary Logo" height="180" width="180">
             </div>
             <h1 class="tanimation keader">
-                <span class="site-title">Jeep Duf as fuck</span>
-                <span class="site-description">Noob</span>
+                <span class="site-title">Plexary, LLC</span>
+                <span class="site-description">là một công ty công nghệ với
+                    tiêu chí tạo ra những sản phẩm giá trị, đem lại lợi ích cho người dùng.
+                </span>
+                <span class="site-description" id="notice">Sản phẩm của công ty sẽ sớm được ra mắt trong 2020</span>
             </h1>
-            <div class="download">
-                <a href="#" rel="nofollow">
-                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>Kill Jeep</span></a>
-                <a href="#" rel="nofollow">
-                    <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>Ban Jeep</span></a>
-            </div>
         </div>
     </div>
     <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="e035849f507c62a5a40e0309-|49" defer=""></script>
