Added new sections and functionalities, Temporary Error 404 Page

--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Plexary | About</title>
-    <meta name="description" content="Thông tin về chúng tôi">
-    <meta name="keywords" content="Plexary Infomation, thông tin về công ty Plexary, Plexary làm gì, Plexary LLC là công ty gì, Thông tin ứng dụng Plexary">
+    <title>Plexary | Contact</title>
+    <meta name="description" content="Liên hệ chúng tôi">
+    <meta name="keywords" content="Liên hệ Plexary, Contact Plexary, Thông tin liên hệ Plexary, Công ty Plexary, Plexary Liên hệ">
     <meta property="og:image" content="https://bit.ly/PlexaryDemoLogo" />
     <meta property="og:type" content="website" />
-    <link rel=canonical href="https://www.plexary.com/about">
+    <link rel=canonical href="https://www.plexary.com/contact">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400&display=swap" rel="stylesheet">
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -48,20 +48,15 @@
         </nav>
     </header>
     <div id="particles-js">
-        <div class="heading">
-            <div class="tanimation kago">
-                <img src="./img/LogoW.png" alt="Plexary Logo" height="180" width="180">
+        <div id="particles-js">
+            <div class="heading">
+                <h1 class="tanimation keader">
+                    <span class="site-title">Error 404</span>
+                    <span class="site-description">Trang này hiện chưa có. </span>
+                </h1>
             </div>
-            <h1 class="tanimation keader">
-                <span class="site-title">Plexary, LLC</span>
-                <span class="site-description">là một công ty công nghệ với
-                    tiêu chí tạo ra những sản phẩm giá trị, đem lại lợi ích cho người dùng.
-                </span>
-                <span class="site-description" id="notice">Sản phẩm của công ty sẽ sớm được ra mắt trong 2020</span>
-            </h1>
         </div>
-    </div>
-    <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="e035849f507c62a5a40e0309-|49" defer=""></script>
+        <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="e035849f507c62a5a40e0309-|49" defer=""></script>
 </body>
 
 </html>
