--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Plexary | Home</title>
     <meta name="description" content="Plexary - Trang chủ Plexary">
-    <meta name="keywords" content="Plexary, Plexary App, Plexary LLC, Công ty Plexary, Ứng dụng Plexary">
+    <meta name="keywords" content="Trang Chủ Plexary, Plexary App, Plexary LLC, Công ty Plexary, Ứng dụng Plexary">
     <meta property="og:image" content="https://bit.ly/PlexaryDemoLogo" />
     <meta property="og:type" content="website" />
     <link rel=canonical href="https://www.plexary.com/">
@@ -36,8 +36,19 @@
 </head>
 
 <body>
+    <header>
+        <div></div>
+        <nav>
+            <ul class="nav__links">
+                <li><a href="https://www.plexary.com/">Home</a></li>
+                <li><a href="https://www.plexary.com/About">About</a></li>
+                <li><a href="https://www.plexary.com/Pricing">Pricing</a></li>
+                <li><a href="https://www.plexary.com/Contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <div id="particles-js">
-        <div class="header">
+        <div class="heading">
             <div class="tanimation kago">
                 <img src="./img/LogoW.png" alt="Plexary Logo" height="180" width="180">
             </div>
