Optimizations and bug fixes

--- a/about.html
+++ b/about.html
@@ -41,9 +41,9 @@
         <nav>
             <ul class="nav__links">
                 <li><a href="https://www.plexary.com/">Home</a></li>
-                <li><a href="https://www.plexary.com/About">About</a></li>
-                <li><a href="https://www.plexary.com/Pricing">Pricing</a></li>
-                <li><a href="https://www.plexary.com/Contact">Contact</a></li>
+                <li><a href="https://www.plexary.com/about">About</a></li>
+                <li><a href="https://www.plexary.com/pricing">Pricing</a></li>
+                <li><a href="https://www.plexary.com/contact">Contact</a></li>
             </ul>
         </nav>
     </header>
