Added download for plexary app (Android) & Error 404 optimizations

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <title>Plexary | About</title>
     <meta name="description" content="Thông tin về chúng tôi">
     <meta name="keywords" content="Plexary Infomation, thông tin về công ty Plexary, Plexary làm gì, Plexary LLC là công ty gì, Thông tin ứng dụng Plexary">
-    <meta property="og:image" content="https://bit.ly/PlexaryDemoLogo" />
+    <meta property="og:image" content="https://github.com/ArcreZeck/Plexary/blob/master/img/PXLogo.jpg" />
     <meta property="og:type" content="website" />
     <link rel=canonical href="https://www.plexary.com/about">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
