--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <title>Plexary | Contact</title>
     <meta name="description" content="Liên hệ chúng tôi">
     <meta name="keywords" content="Liên hệ Plexary, Contact Plexary, Thông tin liên hệ Plexary, Công ty Plexary, Plexary Liên hệ">
-    <meta property="og:image" content="https://bit.ly/PlexaryDemoLogo" />
+    <meta property="og:image" content="https://github.com/ArcreZeck/Plexary/blob/master/img/PXLogo.jpg" />
     <meta property="og:type" content="website" />
     <link rel=canonical href="https://www.plexary.com/contact">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -36,17 +36,6 @@
 </head>
 
 <body>
-    <header>
-        <div></div>
-        <nav>
-            <ul class="nav__links">
-                <li><a href="https://www.plexary.com/">Home</a></li>
-                <li><a href="https://www.plexary.com/about">About</a></li>
-                <li><a href="https://www.plexary.com/pricing">Pricing</a></li>
-                <li><a href="https://www.plexary.com/contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
     <div id="particles-js">
         <div id="particles-js">
             <div class="heading">
@@ -54,6 +43,10 @@
                     <span class="site-title">Error 404</span>
                     <span class="site-description">Trang này hiện chưa có. </span>
                 </h1>
+                <div class="download">
+                    <a href="https://www.plexary.com" rel="nofollow">
+                        <span>Trờ về trang chủ</span></a>
+                </div>
             </div>
         </div>
         <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="e035849f507c62a5a40e0309-|49" defer=""></script>
