--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Plexary | Home</title>
     <meta name="description" content="Plexary - Trang chủ Plexary">
     <meta name="keywords" content="Trang Chủ Plexary, Plexary App, Plexary LLC, Công ty Plexary, Ứng dụng Plexary">
-    <meta property="og:image" content="https://bit.ly/PlexaryDemoLogo" />
+    <meta property="og:image" content="https://github.com/ArcreZeck/Plexary/blob/master/img/PXLogo.jpg" />
     <meta property="og:type" content="website" />
     <link rel=canonical href="https://www.plexary.com/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -57,10 +57,10 @@
                 <span class="site-description">Ứng dụng đang trong giai đoạn thử nghiệm.</span>
             </h1>
             <div class="download">
+                <a href="https://drive.google.com/u/0/uc?id=1jcnv-Vb_ol1owx_mtmuQ1dLd3fWeiGh9&export=download" rel="nofollow">
+                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.0.2 Beta</span></a>
                 <a href="#" rel="nofollow">
-                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v1.0.0 Beta</span></a>
-                <a href="#" rel="nofollow">
-                    <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>v1.0.0 Beta</span></a>
+                    <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>Chưa ra mắt</span></a>
             </div>
         </div>
     </div>
