Fix broken link

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <span class="site-description">Ứng dụng đang trong giai đoạn thử nghiệm.</span>
             </h1>
             <div class="download">
-                <a href="https://drive.google.com/file/d/16rb6otrZbAJyjNgZKj2Yfttlxybrvs9W&export=download" rel="nofollow">
+                <a href="https://drive.google.com/u/0/uc?id=16rb6otrZbAJyjNgZKj2Yfttlxybrvs9W&export=download" rel="nofollow">
                     <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.0.2 Beta</span></a>
                 <a href="#" rel="nofollow">
                     <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>Chưa ra mắt</span></a>
