--- a/index.html
+++ b/index.html
@@ -52,13 +52,12 @@
             <div class="tanimation kago">
                 <img src="./img/LogoW.png" alt="Plexary Logo" height="180" width="180">
             </div>
-            <h1 class="tanimation keader">
-                <span class="site-title">Plexary, LLC.</span>
-                <span class="site-description">Ứng dụng đang trong giai đoạn thử nghiệm.</span>
-            </h1>
+            <h1 class="site-title tanimation keader">Trang chủ Plexary</h1>
+            <span class="site-description tanimation keader">Ứng dụng đang trong giai đoạn thử nghiệm.</span>
+
             <div class="download">
-                <a href="https://drive.google.com/u/0/uc?id=16rb6otrZbAJyjNgZKj2Yfttlxybrvs9W&export=download" rel="nofollow">
-                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.0.2 Beta</span></a>
+                <a href="https://drive.google.com/u/0/uc?id=1adMMWYpc_lX1GDZkGt6mexOPL53NdE0T&export=download" rel="nofollow">
+                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.0.3 Beta</span></a>
                 <a href="#" rel="nofollow">
                     <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>Chưa ra mắt</span></a>
             </div>
