--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
             <span class="site-description tanimation keader">Ứng dụng đang trong giai đoạn thử nghiệm.</span>
 
             <div class="download">
-                <a href="https://drive.google.com/u/0/uc?id=1adMMWYpc_lX1GDZkGt6mexOPL53NdE0T&export=download" rel="nofollow">
-                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.0.3 Beta</span></a>
+                <p>Cập nhật lần cuối: 14/03/2020</p>
+                <a href="https://drive.google.com/u/0/uc?id=1v0yanHMhnWErJ3n4p-quewhPyP4LrN97&export=download" rel="nofollow">
+                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.0.4 Beta</span>
+                </a>
                 <a href="#" rel="nofollow">
                     <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>Chưa ra mắt</span></a>
             </div>
