--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             <div class="tanimation kago">
                 <img src="./img/LogoW.png" alt="Plexary Logo" height="180" width="180">
             </div>
-            <h1 class="site-title tanimation keader">Trang chủ Plexary</h1>
+            <h1 class="site-title tanimation keader">Plexary</h1>
             <span class="site-description tanimation keader">Ứng dụng đang trong giai đoạn thử nghiệm.</span>
 
             <div class="download">
                 <p>Cập nhật lần cuối: 14/03/2020</p>
-                <a href="https://drive.google.com/u/0/uc?id=1v0yanHMhnWErJ3n4p-quewhPyP4LrN97&export=download" rel="nofollow">
-                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.0.4 Beta</span>
+                <a href="https://drive.google.com/u/0/uc?id=12nQGsoLvDYn9W_el33MoFZ7h3w2tduN2&export=download" rel="nofollow">
+                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.0.5 Beta</span>
                 </a>
                 <a href="#" rel="nofollow">
                     <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>Chưa ra mắt</span></a>
