--- a/index.html
+++ b/index.html
@@ -56,9 +56,28 @@
             <span class="site-description tanimation keader">Ứng dụng đang trong giai đoạn thử nghiệm.</span>
 
             <div class="download">
-                <p>Cập nhật lần cuối: 16/03/2020</p>
-                <a href="https://drive.google.com/u/0/uc?id=1NA6tFn8c_IsPnM14eyC1SOO_zOFvtUho&export=download" rel="nofollow">
-                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.0.7 Beta</span>
+                <p>
+                    <script>
+                        var today = new Date();
+                        var dd = String(today.getDate()).padStart(2, '0');
+                        var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
+                        var yyyy = today.getFullYear();
+
+                        var submitTime = '12:25 Trưa';
+                        var submitDay = 17;
+                        var submitMonth = 3;
+                        var submitYear = 2020;
+
+                        if (dd == submitDay && mm == submitMonth && yyyy == submitYear) {
+                            document.write('Lần cuối cập nhật: Hôm nay (', submitTime, ')');
+                        } else if (dd == (submitDay + 1) && mm == submitMonth && yyyy == submitYear) {
+                            document.write('Lần cuối cập nhật: Hôm qua (', submitTime, ')');
+                        } else
+                            document.write('Lần cuối cập nhật: 17/03/2020 (', submitTime, ')');
+                    </script>
+                </p>
+                <a href="https://drive.google.com/u/0/uc?id=1t3WfnTqaXv_OgG5xmRU3hEid26z4H4sJ&export=download" rel="nofollow">
+                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.0.8 Beta</span>
                 </a>
                 <a href="#" rel="nofollow">
                     <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>Chưa ra mắt</span></a>
