Error404 minor fixes

--- a/404.html
+++ b/404.html
@@ -40,7 +40,7 @@
         <div class="heading">
             <h1 class="tanimation keader">
                 <span class="site-title">Error 404</span>
-                <span class="site-description">Trang này hiện chưa có. </span>
+                <span class="site-description">Trang này không tồn tại.</span>
 
             </h1>
             <div class="download">
