Plexary Update 0.0.9 Beta

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                         var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
                         var yyyy = today.getFullYear();
 
-                        var submitTime = '12:25 Trưa';
-                        var submitDay = 17;
+                        var submitTime = '00:03 Sáng';
+                        var submitDay = 18;
                         var submitMonth = 3;
                         var submitYear = 2020;
 
@@ -76,8 +76,8 @@
                             document.write('Lần cuối cập nhật: 17/03/2020 (', submitTime, ')');
                     </script>
                 </p>
-                <a href="https://drive.google.com/u/0/uc?id=1t3WfnTqaXv_OgG5xmRU3hEid26z4H4sJ&export=download" rel="nofollow">
-                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.0.8 Beta</span>
+                <a href="https://www.plexary.com/download/latest.apk" rel="nofollow" download>
+                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.0.9 Beta</span>
                 </a>
                 <a href="#" rel="nofollow">
                     <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>Chưa ra mắt</span></a>
