Plexary Update 0.0.10 Hotfix

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             document.write('Lần cuối cập nhật: ', date, ' (', submitTime, ')');
                     </script>
                 </p>
-                <a href="https://www.plexary.com/download/latest.apk" rel="nofollow" download>
+                <a href="https://www.plexary.com/download/Plexary 0.0.10 Beta.apk" rel="nofollow" download>
                     <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.0.10 Beta</span>
                 </a>
                 <a href="#" rel="nofollow">
