Plexary Website Update

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div id="particles-js">
         <div class="heading">
             <div class="tanimation kago">
-                <img src="./img/LogoW.png" alt="Plexary Logo" height="180" width="180">
+                <img src="./img/plexary.svg" alt="Plexary Logo" height="180" width="180">
             </div>
             <h1 class="site-title tanimation keader">Plexary</h1>
             <span class="site-description tanimation keader">Ứng dụng đang trong giai đoạn thử nghiệm.</span>
