--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                         var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
                         var yyyy = today.getFullYear();
 
-                        var submitTime = '00:09 Sáng';
-                        var submitDay = 29;
-                        var submitMonth = 3;
+                        var submitTime = '7:46 Tối';
+                        var submitDay = 16;
+                        var submitMonth = 4;
                         var submitYear = 2020;
                         var date = submitDay + '/' + submitMonth + '/' + submitYear;
 
@@ -77,8 +77,8 @@
                             document.write('Lần cuối cập nhật: ', date, ' (', submitTime, ')');
                     </script>
                 </p>
-                <a href="https://www.plexary.com/download/Plexary 0.3.1 Beta.apk" rel="nofollow" download>
-                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.3.1 Beta</span>
+                <a href="https://www.plexary.com/download/Plexary 0.4.0 Beta.apk" rel="nofollow" download>
+                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.4.0 Beta</span>
                 </a>
                 <a href="#" rel="nofollow">
                     <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>Chưa ra mắt</span></a>
