Plexary Update 0.4.6 Beta

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                         var mm = String(today.getMonth() + 1).padStart(2, '0'); //January is 0!
                         var yyyy = today.getFullYear();
 
-                        var submitTime = '03:16 Chiều';
-                        var submitDay = 21;
+                        var submitTime = '8:23 Tối';
+                        var submitDay = 23;
                         var submitMonth = 4;
                         var submitYear = 2020;
                         var date = submitDay + '/' + submitMonth + '/' + submitYear;
@@ -77,8 +77,8 @@
                             document.write('Lần cuối cập nhật: ', date, ' (', submitTime, ')');
                     </script>
                 </p>
-                <a href="https://www.plexary.com/download/Plexary0.4.5.apk" rel="nofollow" download>
-                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.4.5 Beta</span>
+                <a href="https://www.plexary.com/download/Plexary 0.4.6 Beta.apk" rel="nofollow" download>
+                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.4.6 Beta</span>
                 </a>
                 <a href="#" rel="nofollow">
                     <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>Chưa ra mắt</span></a>
