Plexary Website Update

--- a/contact.html
+++ b/contact.html
@@ -37,19 +37,19 @@
 
 <body>
     <div id="particles-js">
-        <div id="particles-js">
-            <div class="heading">
-                <h1 class="tanimation keader">
-                    <span class="site-title">Error 404</span>
-                    <span class="site-description">Trang này hiện chưa có. </span>
-                </h1>
-                <div class="download">
-                    <a href="https://www.plexary.com" rel="nofollow">
-                        <span>Trờ về trang chủ</span></a>
-                </div>
+        <div class="heading">
+            <h1 class="tanimation keader">
+                <span class="site-title">Error 404</span>
+                <span class="site-description">Trang này hiện chưa có.</span>
+
+            </h1>
+            <div class="download">
+                <a href="https://www.plexary.com" rel="nofollow">
+                    <span>Trở về trang chủ</span></a>
             </div>
         </div>
-        <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="e035849f507c62a5a40e0309-|49" defer=""></script>
+    </div>
+    <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="e035849f507c62a5a40e0309-|49" defer=""></script>
 </body>
 
 </html>
