--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
                 <img src="./img/plexary.svg" alt="Plexary Logo" height="180" width="180">
             </div>
             <h1 class="site-title tanimation keader">Plexary</h1>
-            <span class="site-description tanimation keader">Ứng dụng đang trong giai đoạn thử nghiệm.</span>
+            <span class="site-description tanimation keader">Chúng tôi sẽ trở lại sớm thôi.</span>
 
             <div class="download">
-                <p>
+                <!-- <p>
                     <script>
                         var today = new Date();
                         var dd = String(today.getDate()).padStart(2, '0');
@@ -76,9 +76,9 @@
                         } else
                             document.write('Lần cuối cập nhật: ', date, ' (', submitTime, ')');
                     </script>
-                </p>
-                <a href="https://www.plexary.com/download/Plexary 0.4.7 Beta.apk" rel="nofollow" download>
-                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>v0.4.7 Beta</span>
+                </p> -->
+                <a href="#" rel="nofollow">
+                    <i class="fa fa-android"></i>&nbsp;&nbsp;<span>Chưa ra mắt</span>
                 </a>
                 <a href="#" rel="nofollow">
                     <i class="fa fa-apple"></i>&nbsp;&nbsp;<span>Chưa ra mắt</span></a>
