--- a/pricing.html
+++ b/pricing.html
@@ -40,12 +40,12 @@
         <div class="heading">
             <h1 class="tanimation keader">
                 <span class="site-title">Error 404</span>
-                <span class="site-description">Trang này hiện chưa có. </span>
+                <span class="site-description">Trang này hiện chưa có.</span>
 
             </h1>
             <div class="download">
                 <a href="https://www.plexary.com" rel="nofollow">
-                    <span>Trờ về trang chủ</span></a>
+                    <span>Trở về trang chủ</span></a>
             </div>
         </div>
     </div>
