Update Plexary Web

--- a/flow.html
+++ b/flow.html
@@ -7,7 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sơ đồ hoạt động</title>
-    <meta property="og:image" content="https://www.plexary.com/plexaryLogo.png" />
+    <meta property="og:title" content="Plexary App Flow">
+    <meta property="og:description" content="Sơ đồ hoạt động của siêu ứng dụng Plexa Foods">
+    <meta property="og:image" content="https://www.plexary.com/img/featured.png" />
     <meta property="og:type" content="website" />
     <link rel=canonical href="https://www.plexary.com/">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400&display=swap" rel="stylesheet">
