--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Plexary | Home</title>
     <meta name="description" content="Plexary - Trang chủ Plexary">
     <meta name="keywords" content="Trang Chủ Plexary, Plexary App, Plexary LLC, Công ty Plexary, Ứng dụng Plexary">
-    <meta property="og:image" content="https://www.plexary.com/plexaryLogo.png" />
+    <meta property="og:image" content="https://www.plexary.com/img/featured.png" />
     <meta property="og:type" content="website" />
     <link rel=canonical href="https://www.plexary.com/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
