--- a/TranThiHoangNhu.html
+++ b/TranThiHoangNhu.html
@@ -47,7 +47,7 @@
                     <br>Chúc em ngày quốc tế phụ nữ vui vẻ 😻.<br>
                     <br>Mong em lúc nào cũng vui vẻ, cố gắng học tập để đạt được nguyện vọng vào trường đại học mà mình hằng mong ước.<br>
                     <br>Hun mín.&nbsp;<br>
-                    <br>Bi bi.
+                    <br>Bi bi. Nhớ làm kiểm tra giữa kì tốt đó nhaaaaaaaa ❤
                   </p>
                   <p class="u-text u-text-3">From Founder &amp; CEO of Plexary, LLC. - <span style="font-weight: 700;">Võ Hoàng Phúc</span>
                     <br>
