--- a/NguyenLeHongNhi.html
+++ b/NguyenLeHongNhi.html
@@ -44,7 +44,7 @@
                   <p class="u-text u-text-2">Xin chào,<br>
                     <span style="font-weight: 700;">Nguyễn Lê Hồng Nhi.</span>
                     <br>
-                    <br>Nhân dịp ngày 8/3, trước hết xin chúc m thi tốt tất cả các môn thi giữa kì.<br>
+                    <br>Nhân dịp ngày 8/3, trước hết xin chúc m thi tốt tất cả các môn thi giữa kì. 10 điểm hết cũng được.<br>
                     <br>Chúc m luôn cảm thấy vui vẻ, may mắn và ráng đậu vào trường đại học UEL theo đúng nguyện vọng của mình ;)))<br>
                     <br>Sớm có bồ nha, nhưng mà đừng trở thành "phụ nữ" sớm là được.&nbsp;<br>
                     <br>Bye.
