--- a/NguyenLeHongNhi.html
+++ b/NguyenLeHongNhi.html
@@ -45,15 +45,17 @@
                     <span style="font-weight: 700;">Nguyễn Lê Hồng Nhi.</span>
                     <br>
                     <br>Nhân dịp ngày 8/3, trước hết xin chúc m thi tốt tất cả các môn thi giữa kì. 10 điểm hết cũng được.<br>
-                    <br>Chúc m luôn cảm thấy vui vẻ, may mắn và ráng đậu vào trường đại học UEL theo đúng nguyện vọng của mình ;)))<br>
-                    <br>Sớm có bồ nha, nhưng mà đừng trở thành "phụ nữ" sớm là được.&nbsp;<br>
-                    <br>Bye.
+                    <br>Chúc m luôn cảm thấy vui vẻ, may mắn và hạnh phúc. Cố gắng hết sức để đậu vào trường đại học UEL theo đúng nguyện vọng của mình nha, biết đâu sau này làm luật sư cho công ty t sao ;)))<br>
+                    <br>Hoặc cũng có thể làm lao công, tuỳ.<br>
+                    <br>Dù gì đi nữa thì vẫn như thường lệ: sớm có bồ. Đừng trở thành "phụ nữ" sớm là được. Đi 5k ráng chịu.&nbsp;<br>
+                    <br>Ê mà nhớ là lúc nào cũng phải vui vẻ mới được nha. Ví dụ như tiếng anh được 4 điểm mà vẫn tươi cười là ok.<br>
+                    <br>Chân thành.
                   </p>
                   <p class="u-text u-text-3">From Founder &amp; CEO of Plexary, LLC. - <span style="font-weight: 700;">Võ Hoàng Phúc</span>
                     <br>
                     <br>Ngày 8, tháng 3, năm 2021.
                   </p>
-                  <a href="https://m.me/phuccer" class="u-btn u-button-style u-hover-palette-2-base u-palette-2-light-2 u-text-body-alt-color u-btn-1">Cảm ơn bạn</a>
+                  <a href="https://m.me/phuccer" class="u-btn u-button-style u-hover-palette-2-base u-palette-2-light-2 u-text-body-alt-color u-btn-1">Gửi lời cảm ơn</a>
                 </div>
               </div>
               <div class="u-align-left u-container-style u-image u-layout-cell u-right-cell u-shape-rectangle u-size-33 u-size-xs-60 u-image-1">
