--- a/NguyenUyenAnhThu.html
+++ b/NguyenUyenAnhThu.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="Chúc mừng ngày quốc tế phụ nữ">
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#478ac9">
-    <link rel=canonical href="https://www.plexary.com/TranThiHoangNhu">
+    <link rel=canonical href="https://www.plexary.com/NguyenUyenAnhThu">
   </head>
   <body class="u-body">
     <section class="u-align-center u-clearfix u-palette-2-light-3 u-section-1" id="carousel_6b61">
@@ -31,7 +31,7 @@
 	C80.2,0,80.1,0,80,0z"></path></svg>
         </div>
         <div class="u-shape u-shape-svg u-text-palette-2-light-2 u-shape-2">
-          <svg class="u-svg-link" preserveAspectRatio="none" viewBox="0 0 160 160" ><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-afd0"></use></svg>
+          <svg class="u-svg-link" preserveAspectRatio="none" viewBox="0 0 160 160"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-afd0"></use></svg>
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" xml:space="preserve" class="u-svg-content" viewBox="0 0 160 160" x="0px" y="0px" id="svg-afd0" style="enable-background:new 0 0 160 160;"><path d="M80,30c27.6,0,50,22.4,50,50s-22.4,50-50,50s-50-22.4-50-50S52.4,30,80,30 M80,0C35.8,0,0,35.8,0,80s35.8,80,80,80
 	s80-35.8,80-80S124.2,0,80,0L80,0z"></path></svg>
         </div>
@@ -42,13 +42,14 @@
                 <div class="u-container-layout u-container-layout-1">
                   <h2 class="u-custom-font u-text u-text-palette-2-base u-text-1">Chúc bạn&nbsp;ngày quốc tế phụ nữ vui vẻ</h2>
                   <p class="u-text u-text-2">Xin chào,<br>
-                    <span style="font-weight: 700;">Trần Thị Hoàng Như.</span>
+                    <span style="font-weight: 700;">Nguyễn Uyên Anh Thư.</span>
                     <br>
-                    <br>Chúc em ngày quốc tế phụ nữ vui vẻ 😻.<br>
-                    <br>Mong em lúc nào cũng vui vẻ, cố gắng học tập để đạt được nguyện vọng vào trường đại học mà mình hằng mong ước.<br>
-                    <br>Phải cố gắng hết mình để thành công hơn trên con đường mình đã chọn. Chúc em luôn may mắn và hạnh phúc. ❤
-                    <br>Hun mín.&nbsp;<br>
-                    <br>Bi bi. Nhớ làm kiểm tra giữa kì tốt đó nhaaaaaaaa ❤
+                    <br>Nhân dịp ngày 8/3, trước hết xin chúc m thi tốt tất cả các môn thi giữa kì. 10 điểm hết cũng được.<br>
+                    <br>Dù không chơi với nhau nhiều nhưng mà chúc m ngày càng học giỏi hơn, sớm đậu được vào trường đại học mình mong muốn. Đặc biệt là lúc nào cũng phải vui vẻ và cố gắng thành công hơn trên con đường của mình ;)))<br>
+                    <br>Chúc m sớm hết cô đơn. Hết "cô đơn" thì tốt nhưng mà đừng trở thành "phụ nữ" sớm là được. Không có tiền đi. :))&nbsp;<br>
+                    <br>Ê mà sau này giàu đừng quên t là ok :)))))<br>
+                    <br>À có một điều nữa t muốn nói. Ráng cố gắng học giỏi, biết đâu sau này lại gặp nhau không phải trong cùng một lớp nữa mà là trong cùng một công ty sao :))<br>
+                    <br>Chân thành.
                   </p>
                   <p class="u-text u-text-3">From Founder &amp; CEO of Plexary, LLC. - <span style="font-weight: 700;">Võ Hoàng Phúc</span>
                     <br>
@@ -57,7 +58,7 @@
                   <a href="https://m.me/phuccer" class="u-btn u-button-style u-hover-palette-2-base u-palette-2-light-2 u-text-body-alt-color u-btn-1">Gửi lời cảm ơn</a>
                 </div>
               </div>
-              <div class="u-align-left u-container-style u-image u-layout-cell u-right-cell u-shape-rectangle u-size-33 u-size-xs-60 u-image-2">
+              <div class="u-align-left u-container-style u-image u-layout-cell u-right-cell u-shape-rectangle u-size-33 u-size-xs-60 u-image-1">
                 <div class="u-container-layout u-valign-middle u-container-layout-2" src=""></div>
               </div>
             </div>
