--- a/DaoVuKhanhVy.html
+++ b/DaoVuKhanhVy.html
@@ -48,7 +48,7 @@
                     <br>Ăn gì mà học giỏi quá z hả?? Thôi, chúc m sớm lên chức <span style="font-weight: 700;">Giáo sư - Tiến sĩ Đào Vũ Khánh Vy</span>. Sớm đậu được vào trường đại học mình mong muốn (Ê mà khuyên thật lòng, đừng đi dược sĩ nha. Mai mốt có robot rồi máy tự động bán thuốc rồi thất nghiệp sao?).<br>
                     <br>Cuộc vui nào cũng phải tàn nhưng mà lúc nào cũng phải tươi cười nha, chúc m thành công trên con đường của mình ;)))<br>
                     <br>Ê mà sau này giàu đừng quên t là ok :))))) Chúc m hạnh phúc bên 🐷<br>
-                    <br>Chân thành.
+                    <br>Best wishes to you.
                   </p>
                   <p class="u-text u-text-3">From Founder &amp; CEO of Plexary, LLC. - <span style="font-weight: 700;">Võ Hoàng Phúc</span>
                     <br>
@@ -57,7 +57,7 @@
                   <a href="https://m.me/phuccer" class="u-btn u-button-style u-hover-palette-2-base u-palette-2-light-2 u-text-body-alt-color u-btn-1">Gửi lời cảm ơn</a>
                 </div>
               </div>
-              <div class="u-align-left u-container-style u-image u-layout-cell u-right-cell u-shape-rectangle u-size-33 u-size-xs-60 u-image-1">
+              <div class="u-align-left u-container-style u-image u-layout-cell u-right-cell u-shape-rectangle u-size-33 u-size-xs-60 u-image-6">
                 <div class="u-container-layout u-valign-middle u-container-layout-2" src=""></div>
               </div>
             </div>
