--- a/LeMyDuyen.html
+++ b/LeMyDuyen.html
@@ -48,8 +48,8 @@
                     <br>Bình thường thì t sẽ chúc mấy cái lặt vặt trước nhưng mà riêng m thì thôi t khuyến mãi cho lời chúc mở đầu luôn.<br>
                     <br><span style="font-weight: 700;">SỚM CÓ BỒ</span>.&nbsp;<br>
                     <br>Ừ, có bồ rồi thích làm "phụ nữ" hay không cũng được, ngộ không cản :))))<br>
-                    <br>Nói chứ, chúc m đậu vào trường đại học mà có nhiều trai đẹp (hoặc đại học m mong ước, tuỳ), lúc nào cũng vui cười chứ đừng có "còn gì nữa đâu mà khóc với sầu" nha.<br>
-                    <br>Chân thành.
+                    <br>Nói chứ, chúc m đậu vào trường đại học mà có nhiều trai đẹp (hoặc đại học m mong ước, tuỳ). Muốn có bồ thì lúc nào cũng phải tươi cười, nếu không thì "<span style="font-weight: 700;">còn gì nữa đâu mà khóc với sầu</span>" ráng chịu.<br>
+                    <br>Best wishes to you.
                   </p>
                   <p class="u-text u-text-3">From Founder &amp; CEO of Plexary, LLC. - <span style="font-weight: 700;">Võ Hoàng Phúc</span>
                     <br>
@@ -58,7 +58,7 @@
                   <a href="https://m.me/phuccer" class="u-btn u-button-style u-hover-palette-2-base u-palette-2-light-2 u-text-body-alt-color u-btn-1">Gửi lời cảm ơn</a>
                 </div>
               </div>
-              <div class="u-align-left u-container-style u-image u-layout-cell u-right-cell u-shape-rectangle u-size-33 u-size-xs-60 u-image-1">
+              <div class="u-align-left u-container-style u-image u-layout-cell u-right-cell u-shape-rectangle u-size-33 u-size-xs-60 u-image-4">
                 <div class="u-container-layout u-valign-middle u-container-layout-2" src=""></div>
               </div>
             </div>
