--- a/LeThiHaiYen.html
+++ b/LeThiHaiYen.html
@@ -44,16 +44,20 @@
                   <p class="u-text u-text-2">Xin chào,<br>
                     <span style="font-weight: 700;">Cô Lê Thị Hải Yến.</span>
                     <br>
-                    <br>Nhân dịp ngày 8/3, ...<br>
+                    <br>Nhân dịp ngày 8/3, tập thể lớp <span style="font-weight: 700;">12C1</span> kính gửi đến cô một món quà nho nhỏ.<br>
+                    <br>Mẹ là người sinh ra ta, là người có công ơn dưỡng dục. Cô là người lái đò, là người đưa chúng em đến bến bờ kiến thức, trang bị hành trang để em bước vào đời.<br>
+                    <br>Chúng em biết rằng công việc của giáo viên là một công việc cao cả, không hề dễ dàng...<br>
+                    <br>Chúng em thật sự cảm thấy biết ơn và quý trọng những điều mà cô làm vì chúng em, và cũng cảm thấy có lỗi vì sự nghịch ngợm, quậy phá của đám học sinh không lớn nổi này đã mang cho cô nhiều phiền muộn.<br>
+                    <br>Cảm ơn cô vì tất cả. Chúc cô ngày 8/3 và những ngày sau này đều mạnh khỏe, hạnh phúc, công tác tốt và thành công trong sự nghiệp trồng người.<br>
                   </p>
-                  <p class="u-text u-text-3">From Founder &amp; CEO of Plexary, LLC. - <span style="font-weight: 700;">Võ Hoàng Phúc</span>
-                    <br>
+                  <p class="u-text u-text-3">Từ gia đình nhỏ của cô,</span>
+                    <br><span style="font-weight: 700;">ABC1 ( 2018 - 2021 )<br>
                     <br>Ngày 8, tháng 3, năm 2021.
                   </p>
                   <a href="https://m.me/phuccer" class="u-btn u-button-style u-hover-palette-2-base u-palette-2-light-2 u-text-body-alt-color u-btn-1">Gửi lời cảm ơn</a>
                 </div>
               </div>
-              <div class="u-align-left u-container-style u-image u-layout-cell u-right-cell u-shape-rectangle u-size-33 u-size-xs-60 u-image-1">
+              <div class="u-align-left u-container-style u-image u-layout-cell u-right-cell u-shape-rectangle u-size-33 u-size-xs-60 u-image-5">
                 <div class="u-container-layout u-valign-middle u-container-layout-2" src=""></div>
               </div>
             </div>
