--- a/NguyenLeHongNhi.html
+++ b/NguyenLeHongNhi.html
@@ -46,10 +46,10 @@
                     <br>
                     <br>Nhân dịp ngày 8/3, trước hết xin chúc m thi tốt tất cả các môn thi giữa kì. 10 điểm hết cũng được.<br>
                     <br>Chúc m luôn cảm thấy vui vẻ, may mắn và hạnh phúc. Cố gắng hết sức để đậu vào trường đại học UEL theo đúng nguyện vọng của mình nha, biết đâu sau này làm luật sư cho công ty t sao ;)))<br>
-                    <br>Hoặc cũng có thể làm lao công, tuỳ.<br>
+                    <br><span style="font-weight: 700;">Hoặc cũng có thể làm lao công, tuỳ.</span><br>
                     <br>Dù gì đi nữa thì vẫn như thường lệ: sớm có bồ. Đừng trở thành "phụ nữ" sớm là được. Đi 5k ráng chịu.&nbsp;<br>
                     <br>Ê mà nhớ là lúc nào cũng phải vui vẻ mới được nha. Ví dụ như tiếng anh được 4 điểm mà vẫn tươi cười là ok.<br>
-                    <br>Chân thành.
+                    <br>Best wishes to you.
                   </p>
                   <p class="u-text u-text-3">From Founder &amp; CEO of Plexary, LLC. - <span style="font-weight: 700;">Võ Hoàng Phúc</span>
                     <br>
