--- a/NguyenUyenAnhThu.html
+++ b/NguyenUyenAnhThu.html
@@ -49,7 +49,7 @@
                     <br>Chúc m sớm hết cô đơn. Hết "cô đơn" thì tốt nhưng mà đừng trở thành "phụ nữ" sớm là được. Không có tiền đi. :))&nbsp;<br>
                     <br>Ê mà sau này giàu đừng quên t là ok :)))))<br>
                     <br>À có một điều nữa t muốn nói. Ráng cố gắng học giỏi, biết đâu sau này lại gặp nhau không phải trong cùng một lớp nữa mà là trong cùng một công ty sao :))<br>
-                    <br>Chân thành.
+                    <br>Best wishes to you.
                   </p>
                   <p class="u-text u-text-3">From Founder &amp; CEO of Plexary, LLC. - <span style="font-weight: 700;">Võ Hoàng Phúc</span>
                     <br>
@@ -58,7 +58,7 @@
                   <a href="https://m.me/phuccer" class="u-btn u-button-style u-hover-palette-2-base u-palette-2-light-2 u-text-body-alt-color u-btn-1">Gửi lời cảm ơn</a>
                 </div>
               </div>
-              <div class="u-align-left u-container-style u-image u-layout-cell u-right-cell u-shape-rectangle u-size-33 u-size-xs-60 u-image-1">
+              <div class="u-align-left u-container-style u-image u-layout-cell u-right-cell u-shape-rectangle u-size-33 u-size-xs-60 u-image-3">
                 <div class="u-container-layout u-valign-middle u-container-layout-2" src=""></div>
               </div>
             </div>
