--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
                 <span class="site-description">là một công ty công nghệ với
                     tiêu chí tạo ra những sản phẩm giá trị, đem lại lợi ích cho người dùng.
                 </span>
-                <span class="site-description" id="notice">Sản phẩm của công ty sẽ sớm được ra mắt trong 2020</span>
+                <span class="site-description" id="notice">Sản phẩm của công ty sẽ sớm được ra mắt trong năm 2021</span>
             </h1>
         </div>
     </div>
